[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/camera/cameraEffects/BlackoutArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 480, 320 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.43949, 0.579618, 1 )
colors = PoolColorArray( 0.196078, 0.196078, 0.196078, 0, 0.196078, 0.196078, 0.196078, 1, 0.196078, 0.196078, 0.196078, 1, 0.196078, 0.196078, 0.196078, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 960

[node name="BlackoutArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteLR" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 320 )
scale = Vector2( 1, 640 )
texture = SubResource( 3 )

[node name="SpriteUD" type="Sprite" parent="."]
visible = false
position = Vector2( -480, 0 )
rotation = 1.5708
scale = Vector2( 0.7, 960 )
texture = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_BlackoutArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BlackoutArea_body_exited"]
